--- a/src/Nav-bar.css
+++ b/src/Nav-bar.css
@@ -1,28 +1,34 @@
 nav{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 20px;
     background-color: rgb(242, 241, 241);
 }
 nav .mainMenu ul{
     display: flex;
     gap: 10px;
+
 }
 nav .mainMenu ul li{
     display: inline-block;
 }
 nav a{
-    list-style-type: none;
     text-decoration: none;
     color: black;
+    
 }
 .menuIcon{
-    
+    z-index: 2;
     display: none;
+    cursor: pointer;
+}
+.whiteMenuIcon{
+    background-color: white!important;
 }
 .menuIcon div{
-    width: 25px;
-    height:5px;
+    width: 23px;
+    height:3px;
     background-color: black; 
     
 }
@@ -31,6 +37,22 @@ nav a{
     display: none;
 }
 .slidebarmenu ul{
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    font-size: 1.2rem;
+    /* padding-left: 0; */
+}
+.slidebarmenu ul li a{
+    color: white;
+    
+}
+.mobileLeftNavCol{
+    display: none;
+}
+.slidebar-show{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -40,16 +62,13 @@ nav a{
     height: 100vh;
     top: 0;
     left: 0;
-    background-color: red;
+    background-color: rgba(0, 0, 0, 0.954);
 }
-.mobileLeftNavCol{
-    display: none;
-}
-
 
 @media only screen and (max-width: 600px){
     .slidebarmenu{
         /* display: block; */
+        
     }
     .menuIcon{
         display: flex;
